--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
   <head>
     <title>Interactive Graphs</title>
+    <link rel="stylesheet" href="styles.css" />
     <style>
       .chart-container {
         margin: 20px;
       }
-      #vis-chart #vis-heatmap {
+      #vis-chart #vis-heatmap #vis-histogram {
         width: 100%;
         height: 500px;
       }
     </style>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
@@ -30,8 +32,35 @@
       <div id="vis-heatmap"></div>
     </div>
 
+    <div class="chart-container">
+      <h2>Graph 3</h2>
+      <div id="vis-histogram"></div>
+    </div>
+
+    <div class="chart-container">
+      <img src="graphs/scattplot_facets.png" />
+    </div>
+
+    <div class="chart-container">
+      <h2>
+        Sentiment Score vs Average Rating for Professors from Northeastern
+        Colleges (20+ Ratings)
+      </h2>
+      <div id="scatterplot-individual" class="chart"></div>
+    </div>
+
+    <div class="chart-container">
+      <h2>
+        Average Position of Sentiment Score vs Average Rating per Northeastern
+        College
+      </h2>
+      <div id="scatterplot-averages" class="chart"></div>
+    </div>
+
     <!-- Include Graph-Specific Script -->
     <script src="graphs/graphs1.js"></script>
     <script src="graphs/graphs2.js"></script>
+    <script src="graphs/graphs3.js"></script>
+    <script src="graphs/graphs45.js"></script>
   </body>
 </html>
