--- a/index.html
+++ b/index.html
@@ -3,30 +3,19 @@
   <head>
     <title>Interactive Graphs</title>
     <link rel="stylesheet" href="styles.css" />
-    <style>
-      .chart-container {
-        margin: 20px;
-      }
-      #vis-chart #vis-heatmap #vis-histogram {
-        width: 100%;
-        height: 500px;
-      }
-    </style>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
   </head>
   <body>
-    <h1>Interactive Graphs</h1>
+    <h1>Graphs</h1>
 
-    <!-- Placeholder for Graph 1 -->
     <div class="chart-container">
       <h2>Graph 1</h2>
       <div id="vis-chart"></div>
     </div>
 
-    <!-- Placeholder for Graph 2 -->
     <div class="chart-container">
       <h2>Graph 2</h2>
       <div id="vis-heatmap"></div>
@@ -38,7 +27,7 @@
     </div>
 
     <div class="chart-container">
-      <img src="graphs/scattplot_facets.png" />
+      <img class="chart-img" src="graphs/scattplot_facets.png" />
     </div>
 
     <div class="chart-container">
