Updated info for graphs 1/2

--- a/index.html
+++ b/index.html
@@ -60,11 +60,35 @@
     <div class="chart-container">
       <h2>Graph 1</h2>
       <div id="vis-chart"></div>
+      <p>
+        The dataset consists of information about tag frequencies for different
+        colleges and departments at Northeastern University. It is visualized in
+        an interactive bar chart, where attributes include "Popular Tags,"
+        "NEU_Colleges," "Department," and "Count," representing the frequency of
+        each tag. The data highlights patterns such as how frequently certain
+        tags like "Accessible outside class" or "Amazing lectures" are
+        associated with specific departments across colleges. The interactive
+        nature allows filtering by college, enabling detailed insights into the
+        distribution of tags, making it useful for analyzing academic
+        experiences or course characteristics.
+      </p>
     </div>
 
     <div class="chart-container">
       <h2>Graph 2</h2>
       <div id="vis-heatmap"></div>
+      <p>
+        The dataset explores ratings and metrics across various colleges and
+        departments at Northeastern University, focusing on attributes like
+        average ratings, number of ratings, and difficulty levels. It is
+        structured as an interactive heatmap, where rows represent colleges and
+        columns represent departments, with values encoded in color. The data
+        includes hundreds of entries, sourced from academic evaluations or
+        surveys, and allows users to filter by specific colleges or metrics for
+        a customized view. This comprehensive structure is designed to offer
+        insights into educational quality and performance trends across
+        departments.
+      </p>
     </div>
 
     <div class="chart-container">
