--- a/index.html
+++ b/index.html
@@ -15,45 +15,38 @@
     <div class="chart-container">
       <h2>Topics, Tasks, and Goals</h2>
       <p>
-        Our research question stated, "Which colleges/departments in
-        Northeastern University have the best-rated professors, and how does the
-        distribution of average ratings vary across these departments?"
-      </p>
-
-      <p>
-        Our main goal was to observe the differences in subjective ability
-        between the professors at Northeastern University. We used subjective
-        scoring data through RateMyProfessor to draw insights into which
-        Northeastern colleges perform better than others.
-      </p>
-
-      <p>
-        We wanted to give students helpful information to make better choices
-        when picking their classes. Additionally, this analysis can provide the
-        university with a clearer picture of teaching quality across its
-        colleges, showing where things are going well and where there might be
-        room for improvement.
+        Finding quality professors is essential for a positive college
+        experience, particularly at large institutions like Northeastern
+        University. Our research objective aims to identify which colleges and
+        departments within Northeastern have the best-rated professors,
+        utilizing data from Rate My Professor. Specifically, our research
+        question focuses on understanding the distribution of average professor
+        ratings across various departments. By analyzing subjective rating data,
+        we intend to provide valuable insights that can assist students in
+        making informed decisions when selecting courses. Additionally, this
+        analysis will offer the university a comprehensive view of teaching
+        quality across its colleges, pinpointing areas of strength and
+        opportunities for improvement.
       </p>
     </div>
 
     <div class="chart-container">
       <h2>Data</h2>
       <p>
-        The initial scraped dataset consisted of 3494 rows and 15 columns, with
-        various numerical and categorical features such as professor name,
-        department, college, rating, level of difficulty, reviews, and several
-        others.
-      </p>
-
-      <p>
-        We collected the data partly by scraping the RateMyProfessor website,
-        with some help from an available API.
-      </p>
-
-      <p>
-        Once the data was collected, we preprocessed certain columns and rows to
-        deal with NaN values and other issues, so the data could be ready for
-        visualization.
+        We began by collecting essential information about professors,
+        specifically their names and IDs. Utilizing an available API, we
+        retrieved this foundational data, serving as a gateway to enhancing our
+        dataset. With the IDs, we then proceeded to scrape additional
+        information, gathering a comprehensive array of details such as
+        department affiliations, college names, ratings, levels of difficulty,
+        and reviews. Once we amassed this dataset, which consisted of 3,494 rows
+        and 15 columns, we undertook an essential preprocessing phase. This step
+        involved cleaning the data to ensure its quality and reliability. We
+        focused on identifying and addressing NaN values, duplicates, and any
+        inconsistencies that could compromise our analysis. This careful setup
+        laid the groundwork for creating visual representations that could help
+        explain the complexities of professor ratings across various departments
+        and colleges.
       </p>
     </div>
 
@@ -145,6 +138,20 @@
         Colleges (20+ Ratings)
       </h2>
       <div id="scatterplot-individual" class="chart"></div>
+      <p>
+        Finding quality professors is essential for a positive college
+        experience, particularly at large institutions like Northeastern
+        University. Our research objective aims to identify which colleges and
+        departments within Northeastern have the best-rated professors,
+        utilizing data from Rate My Professor. Specifically, our research
+        question focuses on understanding the distribution of average professor
+        ratings across various departments. By analyzing subjective rating data,
+        we intend to provide valuable insights that can assist students in
+        making informed decisions when selecting courses. Additionally, this
+        analysis will offer the university a comprehensive view of teaching
+        quality across its colleges, pinpointing areas of strength and
+        opportunities for improvement.
+      </p>
     </div>
 
     <div class="chart-container">
@@ -153,6 +160,65 @@
         College
       </h2>
       <div id="scatterplot-averages" class="chart"></div>
+    </div>
+
+    <div class="chart-container">
+      <h2>Conclusion</h2>
+      <p>
+        Our analysis of Northeastern University's RateMyProfessor data has
+        provided valuable insights into the distribution of average ratings
+        across different colleges and departments. By visualizing the data
+        through interactive graphs, we were able to identify patterns and trends
+        that can help students make informed decisions when selecting courses
+        and professors. The data showed that colleges like CSSH, Bouve College,
+        CAMD, COS, and CPS have a higher number of professors with better
+        ratings, while colleges like COE and DMSB have a more skewed
+        distribution. The scatterplots also revealed that the correlation
+        between average ratings and level of difficulty is not as strong as
+        expected, with most colleges showing mild negative correlations. The
+        sentiment analysis further highlighted the relationship between
+        sentiment scores and average ratings, providing a more nuanced view of
+        professor performance. Overall, our analysis has shed light on the
+        teaching quality at Northeastern University and can be used to guide
+        students in their academic choices.
+      </p>
+    </div>
+
+    <div class="chart-container">
+      <h2>References</h2>
+      <ul>
+        <li>
+          <a
+            href="https://www.ratemyprofessors.com/school/696"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            RateMyProfessor
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.ratemyprofessors.com/search/professors/696?q=*"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            RateMyProfessor Professors
+          </a>
+        </li>
+        <li>
+          Perez-Rivero, C. A., de Obesso, M. de la M., & Nunez-Canal, M. (2022).
+          Digital competence among university professors: analysis of the impact
+          of the COVID crisis. Economic Research-Ekonomska Istrazivanja, 36(3).
+          https://doi.org/10.1080/1331677X.2022.2155859
+        </li>
+        <li>
+          Murray D, Boothby C, Zhao H, Minik V, Berube N, Lariviere V, Sugimoto
+          CR. Exploring the personal and professional factors associated with
+          student evaluations of tenure-track faculty. PLoS One. 2020 Jun
+          3;15(6):e0233515. doi: 10.1371/journal.pone.0233515. PMID: 32492028;
+          PMCID: PMC7269236. https://pubmed.ncbi.nlm.nih.gov/32492028/
+        </li>
+      </ul>
     </div>
 
     <!-- Include Graph-Specific Script -->
