Updated Graph Descriptions 5/6

--- a/index.html
+++ b/index.html
@@ -139,18 +139,21 @@
       </h2>
       <div id="scatterplot-individual" class="chart"></div>
       <p>
-        Finding quality professors is essential for a positive college
-        experience, particularly at large institutions like Northeastern
-        University. Our research objective aims to identify which colleges and
-        departments within Northeastern have the best-rated professors,
-        utilizing data from Rate My Professor. Specifically, our research
-        question focuses on understanding the distribution of average professor
-        ratings across various departments. By analyzing subjective rating data,
-        we intend to provide valuable insights that can assist students in
-        making informed decisions when selecting courses. Additionally, this
-        analysis will offer the university a comprehensive view of teaching
-        quality across its colleges, pinpointing areas of strength and
-        opportunities for improvement.
+        Our college professor scatter plot displays the relationship between
+        sentiment scores and average ratings for professors across different
+        colleges at Northeastern University. Each point represents a professor
+        with at least 20 ratings, color-coded by their respective college. There
+        is a strong positive correlation between sentiment scores and average
+        ratings. This trend suggests that professors with a more positive
+        sentiment in their reviews generally receive higher average ratings.
+        Most ratings range between 2.0 and 4.5, while sentiment scores range
+        from around -0.10 to 0.40. A few outliers with lower ratings (~1.5) and
+        sentiment scores (< 0.00) suggest some professors receive consistently
+        negative feedback. Professors from all colleges are spread across the
+        entire range, indicating that no single college lies in a specific
+        sentiment score or rating range. Bouve College of Health Sciences seemed
+        to perform as the best college, clustering in the higher sentiment and
+        rating ranges.
       </p>
     </div>
 
@@ -165,22 +168,20 @@
     <div class="chart-container">
       <h2>Conclusion</h2>
       <p>
-        Our analysis of Northeastern University's RateMyProfessor data has
-        provided valuable insights into the distribution of average ratings
-        across different colleges and departments. By visualizing the data
-        through interactive graphs, we were able to identify patterns and trends
-        that can help students make informed decisions when selecting courses
-        and professors. The data showed that colleges like CSSH, Bouve College,
-        CAMD, COS, and CPS have a higher number of professors with better
-        ratings, while colleges like COE and DMSB have a more skewed
-        distribution. The scatterplots also revealed that the correlation
-        between average ratings and level of difficulty is not as strong as
-        expected, with most colleges showing mild negative correlations. The
-        sentiment analysis further highlighted the relationship between
-        sentiment scores and average ratings, providing a more nuanced view of
-        professor performance. Overall, our analysis has shed light on the
-        teaching quality at Northeastern University and can be used to guide
-        students in their academic choices.
+        Our college averages scatter plot summarizes the average sentiment score
+        and average rating for each college at Northeastern University. Similar
+        to the first graph, there is a positive trend between the average
+        sentiment score and average rating. Bouve College of Health Sciences has
+        one of the highest average ratings (~3.85) and a relatively high
+        sentiment score (~0.18), indicating a positive approval by many
+        students. College of Science and D'Amore-McKim School of Business have
+        moderate ratings and sentiment scores, clustered around 3.4 to 3.6
+        ratings and ~0.15 sentiment score. Khoury College of Computer Sciences
+        and School of Law have the lowest average ratings and sentiment scores
+        among the colleges displayed. An Unknown category has been included,
+        with a relatively high rating and sentiment score. This category might
+        have represented professors not formally associated with a single
+        college or courses offered across multiple disciplines.
       </p>
     </div>
 
