Changed Graph Titles

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     </div>
 
     <div class="chart-container">
-      <h2>Graph 1</h2>
+      <h2>
+        Distribution of Average Rating of Professors among different colleges
+      </h2>
       <div id="vis-histogram"></div>
       <p>
         The histogram above shows the distribution of average ratings for
@@ -76,7 +78,7 @@
     </div>
 
     <div class="chart-container">
-      <h2>Graph 2</h2>
+      <h2>Popular Tag Frequency for Different Professors</h2>
       <div id="vis-chart"></div>
       <p>
         The dataset consists of information about tag frequencies for different
@@ -93,7 +95,7 @@
     </div>
 
     <div class="chart-container">
-      <h2>Graph 3</h2>
+      <h2>Heatmap of Metric Distribution by Different Majors</h2>
       <div id="vis-heatmap"></div>
       <p>
         The dataset explores ratings and metrics across various colleges and
