--- a/index.html
+++ b/index.html
@@ -185,7 +185,39 @@
 
     <div class="chart-container">
       <h2>Conclusion</h2>
-      
+      <p>
+        Our analysis of Northeastern University's Rate My Professor data offers
+        insights into the distribution of professor ratings across various
+        colleges and departments. A primary finding is the generally positive
+        distribution of professor ratings across Northeastern, with most
+        colleges having a significant proportion of professors rated between 4.0
+        and 5.0. Colleges such as Bouve College of Health Sciences, the College
+        of Social Sciences and Humanities, and the College of Science exhibited
+        right-skewed distributions, indicating a higher frequency of well-rated
+        professors. Conversely, Khoury College of Computer Sciences displayed a
+        more mixed distribution, suggesting higher variability in student
+        experiences. Our sentiment analysis further reinforced this trend,
+        showing a strong positive correlation between sentiment scores and
+        average ratings. Professors who receive more favorable reviews tend to
+        have higher overall ratings, with Bouve College standing out for its
+        consistently high sentiment and rating scores. On the other hand, Khoury
+        and the School of Law had lower average ratings and sentiment scores,
+        suggesting areas where student satisfaction may be lower or more
+        variable. Interestingly, the relationship between a professor's rating
+        and the perceived difficulty of their course was not as straightforward
+        as one might assume. While there were mild negative correlations across
+        most colleges, they were not strong enough to conclusively link higher
+        difficulty with lower ratings. This information can benefit students
+        seeking specific learning environments or teaching methods. Overall, our
+        research provides a comprehensive overview of teaching quality across
+        Northeastern University. Most colleges feature highly rated professors,
+        and while course difficulty plays a role in student evaluations, it is
+        not the sole determinant of a professor's rating. These insights can
+        help students choose professors and courses that align with their
+        academic goals and learning preferences while offering the university a
+        data-driven perspective on areas of strength and opportunities for
+        improvement.
+      </p>
     </div>
 
     <div class="chart-container">
