--- a/index.html
+++ b/index.html
@@ -98,16 +98,18 @@
       <h2>Interactive Histogram of Metric Distribution by Different Majors</h2>
       <div id="vis-interactive-histogram"></div>
       <p>
-        The dataset explores ratings and metrics across various colleges and
-        departments at Northeastern University, focusing on attributes like
-        average ratings, number of ratings, and difficulty levels. It is
-        structured as an interactive heatmap, where rows represent colleges and
-        columns represent departments, with values encoded in color. The data
-        includes hundreds of entries, sourced from academic evaluations or
-        surveys, and allows users to filter by specific colleges or metrics for
-        a customized view. This comprehensive structure is designed to offer
-        insights into educational quality and performance trends across
-        departments.
+        The interactive histograms in this chart were designed to visually
+        represent the distribution of metrics, such as average ratings or
+        difficulty levels, across various colleges and departments at
+        Northeastern University. Each histogram allows users to observe the
+        frequency of specific metric values, making it easy to identify trends,
+        outliers, or patterns within the data. The interactivity is enhanced by
+        dropdown menus, enabling users to filter by college and metric for a
+        more customized view. Tooltips add depth to the analysis by providing
+        detailed information for each bar when hovered over, such as the college
+        name, metric type, and corresponding value. The overall design is large
+        and centrally aligned to ensure clarity and prominence, making the data
+        accessible and easy to explore for meaningful insights.
       </p>
     </div>
 
@@ -166,7 +168,8 @@
 
     <div class="chart-container">
       <h2>
-        Boxplot of Average Ratings for Professors from Different Northeastern colleges
+        Boxplot of Average Ratings for Professors from Different Northeastern
+        colleges
       </h2>
       <img class="chart-img" src="graphs/box_plot.png" />
       <p>
